fix(images): change absolute paths to relative for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-image">
-        <img src="/img/hero.jpg" alt="Dom nad jeziorem" />
+        <img src="./img/hero.jpg" alt="Dom nad jeziorem" />
       </div>
       <div class="container">
         <div class="hero-content">
