fix(all): corrected styles

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <figure class="gallery-item scroll-animate"><img src="img/interior3.png" alt="Drugi salon" /></figure>
         </div>
 
-        <article class="overview__media scroll-animate gallery-interior-fix">
+        <article class="overview__media scroll-animate">
           <figure class="overview__image">
             <figcaption class="image__caption">
               Wysokie wnętrza pełne naturalnego światła, otwarta przestrzeń i ciepło drewna tworzą atmosferę, w której
