fix(all): styles

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <section class="property-details">
       <div class="container">
-        <table class="property-table scroll-animate">
+        <table class="property-table">
           <caption>
             Sprzedaż bezpośrednio
           </caption>
